--- a/src/advantages.jade
+++ b/src/advantages.jade
@@ -1,19 +1,19 @@
-#advantages-container
-    .advantages-main-block
-        .advantages-block
-            .advantages-circle(style="background-color: #fa694e; border: none")
-                img(src="img/1.png" class="advg-img")
-            h2.advantages-head_txt we are creative
-            p.advantages-info_txt Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus suscipit fugit doloremque quam nesciunt eveniet maiores reprehenderit?
-        .advantages-block
-            .advantages-circle
-                img(src="img/2.png" class="advg-img")
-            h3.advantages-head_txt we have skills
-            p.advantages-info_txt Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        .advantages-block
-            .advantages-circle
-                img(src="img/3.png" class="advg-img" style="margin-left: 40px")
-            h3.advantages-head_txt we love to help
-            p.advantages-info_txt Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus suscipit fugit.
+#services-container
+    .services-main-block
+        .services-block
+            .services-circle(style="background-color: #fa694e; border: none")
+                img(src="img/1.png" class="srvc-img")
+            h2.services-head_txt we are creative
+            p.services-info_txt Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus suscipit fugit doloremque quam nesciunt eveniet maiores reprehenderit?
+        .services-block
+            .services-circle
+                img(src="img/2.png" class="srvc-img")
+            h3.services-head_txt we have skills
+            p.services-info_txt Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        .services-block
+            .services-circle
+                img(src="img/3.png" class="srvc-img" style="margin-left: 40px")
+            h3.services-head_txt we love to help
+            p.services-info_txt Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus suscipit fugit.
 
 
