--- a/src/style/advantages.scss
+++ b/src/style/advantages.scss
@@ -1,4 +1,4 @@
-#advantages-container {
+#services-container {
     width: 1920px;
     height: 500px;
     background-color: white;
@@ -7,14 +7,14 @@
     align-items: center;
 }
 
-.advantages-main-block {
+.services-main-block {
     width: 1116px;
     height: 297px;
     display: flex;
     justify-content: space-between;
 }
 
-.advantages-block {
+.services-block {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,27 +22,45 @@
     height: 296px;
 }
 
-.advantages-circle {
+.services-circle {
     width: 107px;
     height: 107px;
     border: 1px solid #808080;
     border-radius: 50%;
 }
 
-.advantages-head_txt {
+.services-head_txt {
     text-transform: capitalize;
     color: #333;
     font-size: 20px;
 }
 
-.advantages-info_txt {
+.services-info_txt {
     color: #808080;
     font-size: 15px;
     line-height: 24px;
     text-align: center;
 }
 
-.advg-img {
+.srvc-img {
     margin: 33px;
 }
 
+@media screen and (max-width: 1920px) {
+    #services-container {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 981px) {
+    .services-main-block {
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
+
+@media screen and (max-width: 676px) {
+    .services-main-block {
+        justify-content: center;
+    }
+}
