--- a/src/index.jade
+++ b/src/index.jade
@@ -5,6 +5,6 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
-        link(rel="stylesheet", href="style/advantages.css")
+        link(rel="stylesheet", href="style/services.css")
     body
-        include advantages.jade
+        include services.jade
