--- a/src/includes/Glavnaya.jade
+++ b/src/includes/Glavnaya.jade
@@ -1,10 +1,10 @@
-div.parent
+div.parent#homes
     div.block
         div.head
-            div.logo
+            div.logotype
                 p(class='m') M
             div.bars    
-                img(src="img/1.png")
+                img(src="img/1.png" id="btn1")
         div.block_Text
             div.Name  
                 p(class='name_Text')  MODERNO
