--- a/src/style/import/Glavnaya.scss
+++ b/src/style/import/Glavnaya.scss
@@ -34,7 +34,7 @@ body {
     justify-content: space-between;
     align-items:center;
 }
-.logo {
+.logotype {
     width: 88px;
     height: 88px;
     background-color: #ffffff;
