--- a/src/includes/_content.jade
+++ b/src/includes/_content.jade
@@ -5,6 +5,7 @@ div.content#content
 	div.project-form
 		div.project-image
 		div.project-view
+			i(class="fas fa-times")
 			p.project-view_head Lorem Ipsum Project
 			p.project-view_text.
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -12,16 +13,26 @@ div.content#content
 				the 1500s, when an unknown printer took a galley of type and scrambled it 
 				to make a type specimen book.
 			button.view-button View Project
-		i(class="fas fa-times")
+			
 	div.pictures-block
-		div.pictures-block_element#pictures-block_element1
+		div.pictures-block_element
 			div.red_plus-block
 				p.white_plus +
 		div.pictures-block_element
+			div.red_plus-block
+				p.white_plus +
 		div.pictures-block_element
+			div.red_plus-block
+				p.white_plus +
 		div.pictures-block_element
+			div.red_plus-block
+				p.white_plus +
 		div.pictures-block_element
+			div.red_plus-block
+				p.white_plus +
 		div.pictures-block_element
+			div.red_plus-block
+				p.white_plus +
 script.
 	$('.success-head').waypoint(function(){this.element.classList.add('addressAppearAnimation');}, {offset:"60%"});
 		
