--- a/src/style/import/contacts/contactsBlock/_contactsBlock.scss
+++ b/src/style/import/contacts/contactsBlock/_contactsBlock.scss
@@ -10,6 +10,13 @@
 	.contactsBlock {
 		height: auto;
 		padding: 10px 0 10px 0;
+		margin-top: 30px;
+	}
+}
+
+@media screen and (max-width: 992px) {
+	.contactsBlock {
+		margin-top: 10px;
 	}
 }
 
