--- a/src/style/import/contacts/contactsBlock/contactsBlockSign/contactsBlockSignForm/_contactsBlockSignFormBtn.scss
+++ b/src/style/import/contacts/contactsBlock/contactsBlockSign/contactsBlockSignForm/_contactsBlockSignFormBtn.scss
@@ -6,11 +6,13 @@
 	color: #ffffff;
 	background-color: #fa694e;
 	border: none;
+	display: flex;
+	justify-content: center;
 }
 
 @media screen and (max-width: 992px) {
 	.contactsBlockSignFormBtn {
-		margin-top: 10px;
+		margin-top: 15px;
 	}
 }
 
