--- a/src/style/import/services/_services.scss
+++ b/src/style/import/services/_services.scss
@@ -2,16 +2,16 @@
 
 #services-container {
     width: 100%;
-    height: 500px;
     background-color: white;
     display: flex;
     justify-content: center;
-    align-items: center;     
+    align-items: center;
+    margin-top: 55px;
+    margin-bottom: 140px;
 }
 
 .services-main-block {
     width: 1116px;
-    height: 297px;
     display: flex;
     justify-content: space-between;
     
@@ -29,8 +29,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 322px;
-    height: 250px;
+    width: 302px;
+    height: 290px;
     justify-content: space-between;
 }
 
@@ -42,6 +42,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
 }
 
 .services-head_txt {
@@ -56,5 +57,6 @@
     line-height: 24px;
     text-align: center;
 }
+
 
 
